# rs-async-api

./: Cargo.toml  Dockerfile  README.md  TODO.md  k8s-deployment.yaml  skaffold.yaml
.github/workflows/: ci.yml
migrations/2019-10-28-205118_create_trades/: up.sql
src/: api.rs  error.rs  kraken.rs  lib.rs  repo.rs  schema.rs  trade.rs
