[package]
name = "rs-bot"
version = "0.1.0"
authors = ["Jan-Gerrit Harms <jan.gerrit.harms@gmail.com>"]
edition = "2018"

[lib]
name = "crytrade"
path = "src/lib.rs"

[[bin]]
name = "trade-history"
path = "src/bin/main.rs"

[[bin]]
name = "trade-db"
path = "src/bin/db.rs"

[[bin]]
name = "insert_db"
path = "src/bin/insert_db.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
tokio = "=0.2.0-alpha.6"
futures = "0.3.1"
diesel = { version = "1.0.0", features = ["postgres", "numeric"] }
dotenv = "0.9.0"
