[package]
name = "rs-bot"
version = "0.1.0"
authors = ["Jan-Gerrit Harms <jan.gerrit.harms@gmail.com>"]
edition = "2018"

[lib]
name = "crytrade"
path = "src/lib.rs"

[[bin]]
name = "sync"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
tokio = "=0.2.0-alpha.6"
futures = "0.3.1"
diesel = { version = "1.0.0", features = ["postgres", "numeric"] }
dotenv = "0.9.0"
async-std = "1.0"
async-trait = "0.1"
clap = "2"
log = "0.4.8"
simple_logger = "1.0.1"
